[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/pngegg.png" type="Texture" id=1]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://UI/Manual.gd" type="Script" id=3]

[node name="ManualMeter" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 0, 236 )
texture = ExtResource( 2 )
offset = Vector2( 0, -236 )

[node name="IncrAngle" type="Timer" parent="."]
wait_time = 0.05

[node name="FlipDir" type="Timer" parent="."]
wait_time = 0.3

[node name="DifficultyIncr" type="Timer" parent="."]
wait_time = 0.8

[node name="Update_Score" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="IncrAngle" to="." method="_on_IncrAngle_timeout"]
[connection signal="timeout" from="FlipDir" to="." method="_on_FlipDir_timeout"]
[connection signal="timeout" from="DifficultyIncr" to="." method="_on_DifficultyIncr_timeout"]
[connection signal="timeout" from="Update_Score" to="." method="_on_Update_Score_timeout"]
